@@ -25,7 +25,6 @@
 package org.restlet.ext.nio.internal.request;
 
 import java.security.Principal;
-import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Set;
@@ -57,6 +56,7 @@ import org.restlet.engine.header.PreferenceReader;
 import org.restlet.engine.header.RangeReader;
 import org.restlet.engine.header.RecipientInfoReader;
 import org.restlet.engine.header.StringReader;
+import org.restlet.engine.header.TagReader;
 import org.restlet.engine.header.WarningReader;
 import org.restlet.engine.security.AuthenticatorUtils;
 import org.restlet.engine.util.DateUtils;
@@ -455,29 +455,9 @@ public class HttpInboundRequest extends Request implements InboundRequest {
                 }
 
                 // Set the If-Match tags
-                List<Tag> match = null;
-                Tag current = null;
                 if (ifMatchHeader != null) {
                     try {
-                        HeaderReader<Object> hr = new HeaderReader<Object>(
-                                ifMatchHeader);
-                        String value = hr.readRawValue();
-
-                        while (value != null) {
-                            current = Tag.parse(value);
-
-                            // Is it the first tag?
-                            if (match == null) {
-                                match = new ArrayList<Tag>();
-                                result.setMatch(match);
-                            }
-
-                            // Add the new tag
-                            match.add(current);
-
-                            // Read the next token
-                            value = hr.readRawValue();
-                        }
+                        new TagReader(ifMatchHeader).addValues(result.getMatch());
                     } catch (Exception e) {
                         this.context.getLogger().log(
                                 Level.INFO,
@@ -487,27 +467,9 @@ public class HttpInboundRequest extends Request implements InboundRequest {
                 }
 
                 // Set the If-None-Match tags
-                List<Tag> noneMatch = null;
                 if (ifNoneMatchHeader != null) {
                     try {
-                        HeaderReader<Object> hr = new HeaderReader<Object>(
-                                ifNoneMatchHeader);
-                        String value = hr.readRawValue();
-
-                        while (value != null) {
-                            current = Tag.parse(value);
-
-                            // Is it the first tag?
-                            if (noneMatch == null) {
-                                noneMatch = new ArrayList<Tag>();
-                                result.setNoneMatch(noneMatch);
-                            }
-
-                            noneMatch.add(current);
-
-                            // Read the next token
-                            value = hr.readRawValue();
-                        }
+                        new TagReader(ifNoneMatchHeader).addValues(result.getNoneMatch());
                     } catch (Exception e) {
                         this.context.getLogger().log(
                                 Level.INFO,
@@ -772,7 +734,8 @@ public class HttpInboundRequest extends Request implements InboundRequest {
 
             if (!Protocol.SIP.getSchemeName().equals(serverProtocol.getSchemeName())
                     && !Protocol.SIPS.getSchemeName().equals(serverProtocol.getSchemeName())) {
-                Context.getCurrentLogger().info("Couldn't find the mandatory \"Host\" HTTP header. Falling back to the IP address.");
+                Context.getCurrentLogger().info(
+                        "Couldn't find the mandatory \"Host\" HTTP header. Falling back to the IP address.");
                 hostDomain = getConnection().getAddress();
                 hostPort = getConnection().getPort();
 
@@ -819,8 +782,8 @@ public class HttpInboundRequest extends Request implements InboundRequest {
         }
 
         // Set the request date
-        String dateHeader = (getHeaders() == null) ? null : 
-            getHeaders().getFirstValue(HeaderConstants.HEADER_DATE, true);
+        String dateHeader = (getHeaders() == null) ? null :
+                getHeaders().getFirstValue(HeaderConstants.HEADER_DATE, true);
         Date date = null;
         if (dateHeader != null) {
             date = DateUtils.parse(dateHeader);
@@ -833,8 +796,8 @@ public class HttpInboundRequest extends Request implements InboundRequest {
         setDate(date);
 
         // Set the max forwards
-        String maxForwardsHeader = (getHeaders() == null) ? null : 
-            getHeaders().getFirstValue(HeaderConstants.HEADER_MAX_FORWARDS, true);
+        String maxForwardsHeader = (getHeaders() == null) ? null :
+                getHeaders().getFirstValue(HeaderConstants.HEADER_MAX_FORWARDS, true);
         if (maxForwardsHeader != null) {
             try {
                 setMaxForwards(Integer.parseInt(maxForwardsHeader));
